--- a/thisability/src/app/header/header.component.css
+++ b/thisability/src/app/header/header.component.css
@@ -1,4 +1,4 @@
-#header, #header-mobile {
+#header {
   width: 100%;
   height: 96px;
   z-index: 50;
@@ -66,3 +66,21 @@
   margin-top: -1px;
 }
 
+#header-mobile {
+  width: 100%;
+  height: 70px;
+  z-index: 50;
+  /* box-shadow: 0 2px 4px 0 rgba(0,0,0,.08); */
+}
+
+#header-mobile img.logo {
+  width: 35px;
+  height: 45px;
+  /* box-shadow: 0 2px 4px 0 rgba(0,0,0,.08); */
+}
+
+
+#header-mobile img.brand {
+ height: 15px;
+  /* box-shadow: 0 2px 4px 0 rgba(0,0,0,.08); */
+}
