--- a/thisability/src/styles.css
+++ b/thisability/src/styles.css
@@ -469,6 +469,10 @@ img.brand {
   width: 100%;
 }
 
+.no-line-height {
+  line-height: 0px !important;
+}
+
 .shadow {
   box-shadow: 0 1px 6px 0 rgba(0,0,0,0.05), 0 1px 6px 0 rgba(0,0,0,0.05);
 }
